Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOBjhjJNf+V9uIeupETGR0c",
+      "authorship_tag": "ABX9TyMfrnA2/ptIqH/SKJEUglg9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3800,7 +3800,7 @@
         "  let (d ~> s) n = s <$ guard (n `mod` d == 0)\r\n",
         "   in fromMaybe . show <*> 3 ~> \"Fizz\" <> 5 ~> \"Buzz\""
       ],
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3815,15 +3815,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "OXVVqdfzQ7XT",
-        "outputId": "4b95c2b9-f71d-401b-ce91-21749b988b8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4b95c2b9-f71d-401b-ce91-21749b988b8c"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4011,10 +4011,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q_rMAPeI4lKX",
-        "outputId": "a3bae3cc-6697-4056-b3e9-e4606a8837b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a3bae3cc-6697-4056-b3e9-e4606a8837b7"
       },
       "source": [
         "# qiita の自称初心者のコード\r\n",
@@ -4038,7 +4038,7 @@
         "    isFizz = num `mod` 3 == 0\r\n",
         "    isBuzz = num `mod` 5 == 0"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4064,10 +4064,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "C0O8OEOk5hbP",
-        "outputId": "c862c937-dfc7-45d1-c3be-385cf236f739",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c862c937-dfc7-45d1-c3be-385cf236f739"
       },
       "source": [
         "# すこし書き換える\r\n",
@@ -4093,7 +4093,7 @@
         "    isFizz = num `mod` 3 == 0\r\n",
         "    isBuzz = num `mod` 5 == 0"
       ],
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4119,10 +4119,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "P12ZrBZL72TD",
-        "outputId": "9b75ea90-9408-46a5-f2c3-521014532927",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b75ea90-9408-46a5-f2c3-521014532927"
       },
       "source": [
         "# where を使わずに let に書き換える\r\n",
@@ -4154,7 +4154,7 @@
         "\r\n",
         "isBuzz num = num `mod` 5 == 0"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4180,10 +4180,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6Ori2GgUB_n-",
-        "outputId": "87d2d05b-03d0-4d1d-c2e0-df0cad9a7a8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87d2d05b-03d0-4d1d-c2e0-df0cad9a7a8b"
       },
       "source": [
         "# case を使ってみる\r\n",
@@ -4210,7 +4210,7 @@
         "\r\n",
         "isBuzz num = num `mod` 5 == 0"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4235,11 +4235,120 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dJ2jxaSNNdbi",
+        "outputId": "be127596-115d-484b-d401-729e4b3fd6a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# p.70 の例\r\n",
+        "%%writefile test.hs\r\n",
+        "import Control.Monad\r\n",
+        "\r\n",
+        "main =\r\n",
+        "  foldr f (return ())\r\n",
+        "      $ map fizzBuzz [1..20]\r\n",
+        "\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> String\r\n",
+        "fizzBuzz num \r\n",
+        "    | mod num 15 == 0 = \"FizzBuzz\"\r\n",
+        "    | mod num 3 == 0 = \"Fizz\"\r\n",
+        "    | mod num 5 == 0 = \"Buzz\"\r\n",
+        "    | otherwise = show num\r\n",
+        "\r\n",
+        "f str act = do putStrLn str \r\n",
+        "               act"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o8VDyEdKPVfo"
+      },
+      "source": [
+        "!runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Wt_mDnsP8cm",
+        "outputId": "78f20357-7e1f-426d-943d-698a1bed6ff8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# forM_\r\n",
+        "%%writefile test.hs\r\n",
+        "import Control.Monad (forM_)\r\n",
+        "\r\n",
+        "main = do\r\n",
+        "  forM_ [1..20] $ \\i -> do\r\n",
+        "    putStrLn (fizzBuzz i)\r\n",
+        "\r\n",
+        "fizzBuzz :: Integer -> String\r\n",
+        "fizzBuzz num \r\n",
+        "    | mod num 15 == 0 = \"FizzBuzz\"\r\n",
+        "    | mod num 3 == 0 = \"Fizz\"\r\n",
+        "    | mod num 5 == 0 = \"Buzz\"\r\n",
+        "    | otherwise = show num"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KIdzSDYaQWaQ"
+      },
+      "source": [
+        "!runghc test.hs"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zfyteKrTRRDQ"
+      },
+      "source": [
+        "# モジュール\r\n",
+        "p.71 からのモジュールの部分は飛ばす。\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "02uvoODA9KAU"
       },
       "source": [
         "# いまここ\r\n",
-        "# p.69"
+        "# p.82"
       ],
       "execution_count": null,
       "outputs": []
