--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhIiUrCd7GLJd1R8x7qbPb",
+      "authorship_tag": "ABX9TyNHGnB6ekRXNmTtrXsfcCHe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4368,11 +4368,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HhaCuoz1h3tH",
-        "outputId": "433ec326-9166-4529-bc22-017bebbc3886",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HhaCuoz1h3tH",
+        "outputId": "433ec326-9166-4529-bc22-017bebbc3886"
       },
       "source": [
         "!ghc -e ':t 3::Int' #=> 3::Int :: Int\r\n",
@@ -4411,11 +4411,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wCiLxIB6m7ev",
-        "outputId": "6ed6cc41-140f-4b7c-b07a-6133218bae5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wCiLxIB6m7ev",
+        "outputId": "6ed6cc41-140f-4b7c-b07a-6133218bae5b"
       },
       "source": [
         "# 汎用変数 p とか t1 , t2 とか\r\n",
@@ -4456,11 +4456,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9VIfoplUsZUJ",
-        "outputId": "ba715623-d3f1-4208-c524-51d55c483b5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9VIfoplUsZUJ",
+        "outputId": "ba715623-d3f1-4208-c524-51d55c483b5f"
       },
       "source": [
         "# 型変数\r\n",
@@ -4482,11 +4482,147 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "SQdOgNYuuyVy",
+        "outputId": "c5cd3e96-6960-4820-e850-fd1d67aee5b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 型制約\r\n",
+        "!ghc -e ':t show' #=> show :: Show a => a -> String"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "show :: Show a => a -> String\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rpqq--MlvE8K",
+        "outputId": "58b4306a-35b1-41d5-e1a0-523d2d9ff768",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 型変数のカインド\r\n",
+        "!ghc -e ':t fmap' #=> map :: Functor f => (a -> b) -> f a -> f b\r\n",
+        "!ghc -e ':t mapM_' #=> mapM_ :: (Monad m, Foldable t) => (a -> m b) -> t a -> m ()\r\n",
+        "!ghc -e 'let{fmapIntList = fmap::(Int->Int)->[Int]->[Int]} in fmapIntList (*10) [1,3,5]' #=> [10,30,50]\r\n",
+        "!ghc -e 'let{fmapIntList = fmap::(Int->String)->[Int]->[String]} in fmapIntList (show) [1,3,5]' #=> [\"1\",\"3\",\"5\"]"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "fmap :: Functor f => (a -> b) -> f a -> f b\n",
+            "mapM_ :: (Monad m, Foldable t) => (a -> m b) -> t a -> m ()\n",
+            "[10,30,50]\n",
+            "[\"1\",\"3\",\"5\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6NDcVaywwiXV",
+        "outputId": "3efc2303-d7de-4fb1-b2bb-27198db49c65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# データコンストラクタ\r\n",
+        "!ghc -e 'data Employee = NewEmployee Integer Bool String deriving (Show)' #=> OK!"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:6: error: parse error on input ‘data’\n",
+            "\n",
+            "<interactive>:0:66: error:\n",
+            "    Parse error: naked expression at top level\n",
+            "    Perhaps you intended to use TemplateHaskell\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2OsBqJ_TyKzO",
+        "outputId": "cc1fc90b-afcd-46d8-d684-0c8e4f5edcb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile test.hs\r\n",
+        "data Employee = NewEmployee Integer Bool String deriving (Show)\r\n",
+        "main = do\r\n",
+        "  let employee = NewEmployee 39 False \"Subhash Khot\"\r\n",
+        "  print employee\r\n",
+        "  let NewEmployee age isManager name = employee\r\n",
+        "  print age"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iDAHHgR_ybZV",
+        "outputId": "f1b69cad-c67f-41fb-fe58-e27657a44093",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc test.hs"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "NewEmployee 39 False \"Subhash Khot\"\n",
+            "39\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "02uvoODA9KAU"
       },
       "source": [
         "# いまここ\r\n",
-        "# p.86"
+        "# p.93"
       ],
       "execution_count": null,
       "outputs": []
