--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHGnB6ekRXNmTtrXsfcCHe",
+      "authorship_tag": "ABX9TyPBCCifDDE3MajcrUOjNTDJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4387,7 +4387,7 @@
         "!ghc -e ':k (->)' #=> (->) :: * -> * -> * 型を2つとる型コンストラクタ\r\n",
         "!ghc -e ':k Int -> String' #=> Int -> String :: *"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4427,7 +4427,7 @@
         "Prelude> :t sample2Params\r\n",
         "sample2Params :: (t1 -> t2) -> t1 -> t2"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4467,7 +4467,7 @@
         "!ghc -e ':t id' #=> id :: a -> a\r\n",
         "!ghc -e ':t head' #=> head :: [a] -> a"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4483,16 +4483,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "SQdOgNYuuyVy",
-        "outputId": "c5cd3e96-6960-4820-e850-fd1d67aee5b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c5cd3e96-6960-4820-e850-fd1d67aee5b8"
       },
       "source": [
         "# 型制約\r\n",
         "!ghc -e ':t show' #=> show :: Show a => a -> String"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4507,10 +4507,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rpqq--MlvE8K",
-        "outputId": "58b4306a-35b1-41d5-e1a0-523d2d9ff768",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "58b4306a-35b1-41d5-e1a0-523d2d9ff768"
       },
       "source": [
         "# 型変数のカインド\r\n",
@@ -4519,7 +4519,7 @@
         "!ghc -e 'let{fmapIntList = fmap::(Int->Int)->[Int]->[Int]} in fmapIntList (*10) [1,3,5]' #=> [10,30,50]\r\n",
         "!ghc -e 'let{fmapIntList = fmap::(Int->String)->[Int]->[String]} in fmapIntList (show) [1,3,5]' #=> [\"1\",\"3\",\"5\"]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4537,16 +4537,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "6NDcVaywwiXV",
-        "outputId": "3efc2303-d7de-4fb1-b2bb-27198db49c65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3efc2303-d7de-4fb1-b2bb-27198db49c65"
       },
       "source": [
         "# データコンストラクタ\r\n",
         "!ghc -e 'data Employee = NewEmployee Integer Bool String deriving (Show)' #=> OK!"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4566,10 +4566,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2OsBqJ_TyKzO",
-        "outputId": "cc1fc90b-afcd-46d8-d684-0c8e4f5edcb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc1fc90b-afcd-46d8-d684-0c8e4f5edcb2"
       },
       "source": [
         "%%writefile test.hs\r\n",
@@ -4580,7 +4580,7 @@
         "  let NewEmployee age isManager name = employee\r\n",
         "  print age"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4595,15 +4595,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "iDAHHgR_ybZV",
-        "outputId": "f1b69cad-c67f-41fb-fe58-e27657a44093",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1b69cad-c67f-41fb-fe58-e27657a44093"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4618,11 +4618,68 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5E3s5Jp_fRcy"
+      },
+      "source": [
+        "# 異なる形式のデータからの選択\r\n",
+        "%%script false\r\n",
+        "data CmdOption\r\n",
+        "  = COptInt Integer\r\n",
+        "  | COptBool Bool\r\n",
+        "  | COptStr String\r\n",
+        "  deriving (Show)\r\n",
+        "\r\n",
+        "*Main> :t COptInt\r\n",
+        "COptInt :: Integer -> CmdOption\r\n",
+        "*Main> :t COptBool\r\n",
+        "COptBool :: Bool -> CmdOption\r\n",
+        "*Main> :t COptStr\r\n",
+        "COptStr :: String -> CmdOption\r\n",
+        "\r\n",
+        "*Main> opt1 = COptInt 120\r\n",
+        "*Main> opt2 = COptStr \"0x78\"\r\n",
+        "*Main> :t opt1\r\n",
+        "opt1 :: CmdOption\r\n",
+        "*Main> :t opt2\r\n",
+        "opt2 :: CmdOption\r\n",
+        "\r\n",
+        "coptToInt :: CmdOption -> Int\r\n",
+        "coptToInt (COptInt n) = fromIntegral n\r\n",
+        "coptToInt (COptStr x) = read x\r\n",
+        "coptToInt (COptBool True) = 1\r\n",
+        "coptToInt (COptBool False) = 0\r\n",
+        "\r\n",
+        "\r\n",
+        "*Main> coptToInt opt1\r\n",
+        "120\r\n",
+        "*Main> coptToInt opt2\r\n",
+        "120"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xL76GCozj3EJ"
+      },
+      "source": [
+        "# コンストラクタはデフォルトではすべての引数について非正格です。\r\n",
+        "# 特に理由がなければ型の前に正格性フラグ ! をつけておきます。\r\n",
+        "# と書いてあるが、ということは特に理由がなければ遅延評価は使わない、ということか。\r\n",
+        "%%script false\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "02uvoODA9KAU"
       },
       "source": [
         "# いまここ\r\n",
-        "# p.93"
+        "# p.95"
       ],
       "execution_count": null,
       "outputs": []
