Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP5DhHpekHmMMmrJuJFxJMB",
+      "authorship_tag": "ABX9TyNa5plVZJ2VsMp+M+QAVO3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4718,7 +4718,117 @@
         "id": "lwPDw5b4etQt"
       },
       "source": [
-        "# レコード記法\r\n"
+        "# レコード記法\r\n",
+        "%%script false\r\n",
+        "data Employee = NewEmployee\r\n",
+        "  { employeeAge :: Integer,\r\n",
+        "    employeeIsManager :: Bool,\r\n",
+        "    employeeName :: String\r\n",
+        "  }\r\n",
+        "  deriving (Show)\r\n",
+        "\r\n",
+        "employee :: Employee\r\n",
+        "employee =\r\n",
+        "  NewEmployee\r\n",
+        "    { employeeName = \"Subhash Khot\",\r\n",
+        "      employeeAge = 39,\r\n",
+        "      employeeIsManager = False\r\n",
+        "    }\r\n",
+        "\r\n",
+        "# フィールドはただの関数\r\n",
+        "*Main> :t employeeAge\r\n",
+        "employeeAge :: Employee -> Integer\r\n",
+        "*Main> employeeAge employee\r\n",
+        "39\r\n",
+        "*Main> employeeIsManager employee\r\n",
+        "False\r\n",
+        "*Main> employeeName employee\r\n",
+        "\"Subhash Khot\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZExK3RvjQBGd",
+        "outputId": "9d9c6106-528c-44d4-f9c9-760d7976dde8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# フィールド名は重複できない\r\n",
+        "%%writefile test.hs\r\n",
+        "data A = NewA { x:: Int }\r\n",
+        "data B = NewB { x:: Int }"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "av-3VVOfQv59",
+        "outputId": "f6ccf1aa-922f-4022-a3f4-9850db863e81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc test.hs $=> error: Multiple declarations of ‘x’"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "test.hs:2:17: error:\n",
+            "    Multiple declarations of ‘x’\n",
+            "    Declared at: test.hs:1:17\n",
+            "                 test.hs:2:17\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFalEuFeQurm"
+      },
+      "source": [
+        "#\r\n",
+        "%%script false\r\n",
+        "*Main> employee02 = employee { employeeIsManager = True, employeeAge = employeeAge employee + 1 }\r\n",
+        "*Main> employeeAge employee02\r\n",
+        "40\r\n",
+        "*Main> employeeIsManager employee02\r\n",
+        "True\r\n",
+        "*Main> employeeName employee02\r\n",
+        "\"Subhash Khot\"\r\n",
+        "*Main> employeeAge employee -- 元のデータは書き換わらない\r\n",
+        "39"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N8ymsy13ST1k"
+      },
+      "source": [
+        "# 識別子\r\n"
       ],
       "execution_count": null,
       "outputs": []
