Colaboratory を使用して作成しました

--- a/learnlisp.ipynb
+++ b/learnlisp.ipynb
@@ -6,7 +6,7 @@
       "name": "learnlisp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4aNpIvnVW/NPtBZWeQHjF",
+      "authorship_tag": "ABX9TyOTzjEdi9TC0uj47MqqbtPl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,11 +431,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x-whBXIQYTmo",
-        "outputId": "774d89c5-4c62-463a-bc8e-c588a6277ea4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x-whBXIQYTmo",
+        "outputId": "774d89c5-4c62-463a-bc8e-c588a6277ea4"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
@@ -455,6 +455,72 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OvL6OG5Najgx",
+        "outputId": "d66976da-f53b-42e7-c4d7-933311e560e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script sbcl --noinform\r\n",
+        "(+ (* 1 2) (- 3 4)) ;;=> 1"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "* \n",
+            "1\n",
+            "* "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vgX2k7bxa_iz"
+      },
+      "source": [
+        "%%script sbcl --noinform\r\n",
+        "format ;;=> The variable FORMAT is unbound."
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6LeznlDGbPfa"
+      },
+      "source": [
+        "%%script sbcl --noinform\r\n",
+        "(setq a 10)\r\n",
+        "a"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYWnvS5rb3gL"
+      },
+      "source": [
+        "%%script sbcl --noinform\r\n",
+        "(setq a (+ 1 2 3))\r\n",
+        "a\r\n",
+        "(setq b a)\r\n",
+        "b"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
