Colaboratory を使用して作成しました

--- a/learnlisp.ipynb
+++ b/learnlisp.ipynb
@@ -6,7 +6,7 @@
       "name": "learnlisp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8Be8Peo/Qre9l4RD2U/O4",
+      "authorship_tag": "ABX9TyP6f9prD2NKhZa8ht/Xa11y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,15 +130,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Nw4_tqRg84Pl"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "0egHkuX8shrv"
@@ -245,7 +236,7 @@
         "outputId": "cc409beb-0f4a-473a-e382-c1a6ec2a996b"
       },
       "source": [
-        "# コメントはセミコロン\r\n",
+        "# コメントはセミコロン 2つ\r\n",
         "%%script sbcl --noinform\r\n",
         "(defun fact  ;; 関数定義 関数名\r\n",
         "    (n) ;; 引数名 型は宣言しない\r\n",
@@ -508,6 +499,7 @@
       },
       "source": [
         "# リスト : たらいまわし関数 (Common Lisp)\r\n",
+        "# 速いバージョン\r\n",
         "%%script sbcl --noinform\r\n",
         "(defun tak (x y z)\r\n",
         "  (declare (type fixnum x y z)\r\n",
@@ -548,7 +540,8 @@
         "id": "F7b9m3Q3MMpq"
       },
       "source": [
-        "# CLOS の場合、クラスはマクロ defclass を使って定義する。defclass は構造体 defstruct と似ている。\r\n",
+        "# CLOS (Common Lisp Object System) の場合、クラスはマクロ defclass を使って定義する。\r\n",
+        "# defclass は構造体 defstruct と似ている。\r\n",
         "\r\n",
         "# (defclass クラス名 (スーパークラス ...)\r\n",
         "#   ((スロット名 :accessor アクセスメソッド名 \r\n",
@@ -608,15 +601,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-whBXIQYTmo",
-        "outputId": "29d405d0-3b6b-4c48-b642-afd4a44ba12c"
+        "outputId": "b447c941-f045-482d-925e-18d43da5dd77"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
-        "(format t \"Hello, World\")\r\n",
-        ";;=> Hello, World\r\n",
-        ";;=> NIL"
+        "(format t \"Hello, World\") ;;=> Hello, World ;;=> NIL\r\n",
+        ";;=> 副作用が Hello, World で、返り値が NIL ということか?"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,18 +666,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6LeznlDGbPfa",
-        "outputId": "32d520ba-5db7-44bf-da53-64fc866828bc"
+        "outputId": "cf63aa3f-b76f-4e08-970d-fd755ba6c6e7"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
-        "(setq a 10)\r\n",
-        "a"
+        "(defvar a) ;;=> A こうしておかないといまの sbcl では warning が出る\r\n",
+        "(setq a 10) ;;=> 10\r\n",
+        "a ;;=> 10"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "* \n",
+            "A\n",
             "* \n",
             "10\n",
             "* \n",
@@ -693,90 +688,25 @@
             "* "
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ A\n",
-            ";     (SETQ A 10)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: A\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     A\n",
-            ";   caught 1 WARNING condition\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SYWnvS5rb3gL",
-        "outputId": "8bbc65c2-cd95-45f6-a159-4bde59eb8ccc"
+        "id": "SYWnvS5rb3gL"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
-        "(setq a (+ 1 2 3))\r\n",
-        "a\r\n",
-        "(setq b a)\r\n",
-        "b"
+        "(defvar a) ;;=> A \r\n",
+        "(defvar b)  ;;=> B\r\n",
+        "(setq a (+ 1 2 3)) ;;=> 6\r\n",
+        "a ;;=> 6\r\n",
+        "(setq b a) ;;=> 6\r\n",
+        "b ;;=> 6"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "* \n",
-            "6\n",
-            "* \n",
-            "6\n",
-            "* \n",
-            "6\n",
-            "* \n",
-            "6\n",
-            "* "
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ A\n",
-            ";     (SETQ A (+ 1 2 3))\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: A\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     A\n",
-            ";   caught 1 WARNING condition\n",
-            "; in: SETQ B\n",
-            ";     (SETQ B A)\n",
-            "; ==>\n",
-            ";   (SET 'B A)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: A\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: B\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variables:\n",
-            ";     A B\n",
-            ";   caught 2 WARNING conditions\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -816,112 +746,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tM64heYHwbGy",
-        "outputId": "cbb6ee60-205e-49b7-c4e0-4ff67d5359f8"
+        "id": "tM64heYHwbGy"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
         "(setq t 10) ;;=> T is a constant and thus can't be set."
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "* \n",
-            "Type HELP for debugger help, or (SB-EXT:EXIT) to exit from SBCL.\n",
-            "\n",
-            "restarts (invokable by number or by possibly-abbreviated name):\n",
-            "  0: [ABORT] Exit debugger, returning to top level.\n",
-            "\n",
-            "((LAMBDA ()))\n",
-            "   source: (SETQ T 10)\n",
-            "0] \n",
-            "* "
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ T\n",
-            ";     (SETQ T 10)\n",
-            "; \n",
-            "; caught ERROR:\n",
-            ";   T is a constant and thus can't be set.\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   caught 1 ERROR condition\n",
-            "\n",
-            "debugger invoked on a SB-INT:COMPILED-PROGRAM-ERROR in thread\n",
-            "#<THREAD \"main thread\" RUNNING {10005E85B3}>:\n",
-            "  Execution of a form compiled with errors.\n",
-            "Form:\n",
-            "  (SETQ T 10)\n",
-            "Compile-time error:\n",
-            "  T is a constant and thus can't be set.\n"
-          ],
-          "name": "stderr"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hMgUFCPnAaA_"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QpNmP0dlwon2",
-        "outputId": "8ff74648-0286-48b4-853e-7fb6f5140e60"
+        "id": "QpNmP0dlwon2"
       },
       "source": [
         "%%script sbcl --noinform\r\n",
         "(setq NIL 10) ;;=> NIL is a constant and thus can't be set."
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "* \n",
-            "Type HELP for debugger help, or (SB-EXT:EXIT) to exit from SBCL.\n",
-            "\n",
-            "restarts (invokable by number or by possibly-abbreviated name):\n",
-            "  0: [ABORT] Exit debugger, returning to top level.\n",
-            "\n",
-            "((LAMBDA ()))\n",
-            "   source: (SETQ NIL 10)\n",
-            "0] \n",
-            "* "
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ ()\n",
-            ";     (SETQ NIL 10)\n",
-            "; \n",
-            "; caught ERROR:\n",
-            ";   NIL is a constant and thus can't be set.\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   caught 1 ERROR condition\n",
-            "\n",
-            "debugger invoked on a SB-INT:COMPILED-PROGRAM-ERROR in thread\n",
-            "#<THREAD \"main thread\" RUNNING {10005E85B3}>:\n",
-            "  Execution of a form compiled with errors.\n",
-            "Form:\n",
-            "  (SETQ NIL 10)\n",
-            "Compile-time error:\n",
-            "  NIL is a constant and thus can't be set.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -937,67 +790,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9p0-drZD0rln",
-        "outputId": "e56ca0e2-5e65-46a0-9c0b-c48f2df07965"
+        "id": "9p0-drZD0rln"
       },
       "source": [
         "# 通常引数は先に評価されてから代入される\r\n",
         "%%script sbcl --noinform\r\n",
-        "(setq x 10)\r\n",
-        "(setq a x)\r\n",
-        "a"
+        "(defvar x)\r\n",
+        "(defvar a)\r\n",
+        "(setq x 10) ;;=> 10\r\n",
+        "(setq a x) ;;=> 10\r\n",
+        "a ;;=> 10"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "* \n",
-            "10\n",
-            "* \n",
-            "10\n",
-            "* \n",
-            "10\n",
-            "* "
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ X\n",
-            ";     (SETQ X 10)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: X\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     X\n",
-            ";   caught 1 WARNING condition\n",
-            "; in: SETQ A\n",
-            ";     (SETQ A X)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: A\n",
-            "\n",
-            "; ==>\n",
-            ";   (SET 'A X)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: X\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variables:\n",
-            ";     A X\n",
-            ";   caught 2 WARNING conditions\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1006,19 +811,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XklmYTZ108c7",
-        "outputId": "2ad69a89-d114-4235-d239-2105a95567c2"
+        "outputId": "4e19bf92-fe42-46b0-d5a6-9cb1317192fb"
       },
       "source": [
         "# QUOTE ' をつけると評価されない\r\n",
         "%%script sbcl --noinform\r\n",
-        "(setq a 'x)\r\n",
-        "a"
+        "(defvar a) ;;=> A\r\n",
+        "(setq a 'x) ;;=> X\r\n",
+        "a ;;=> X"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "* \n",
+            "A\n",
             "* \n",
             "X\n",
             "* \n",
@@ -1026,73 +834,25 @@
             "* "
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ A\n",
-            ";     (SETQ A 'X)\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: A\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     A\n",
-            ";   caught 1 WARNING condition\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3ef3c5Hx1OI4",
-        "outputId": "8a199e37-1b5e-4a52-9d74-3226008362bb"
+        "id": "3ef3c5Hx1OI4"
       },
       "source": [
         "# リストも QUOTE をつけると評価しない\r\n",
         "%%script sbcl --noinform\r\n",
-        "'(1 2 3 4)\r\n",
-        "(setq y '(1 2 3 4))\r\n",
-        "y"
+        "(defvar y) ;;=> Y\r\n",
+        "'y ;;=> Y\r\n",
+        "'(1 2 3 4)  ;;=> (1 2 3 4)\r\n",
+        "(setq y '(1 2 3 4))  ;;=> (1 2 3 4)\r\n",
+        "y  ;;=> (1 2 3 4)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "* \n",
-            "(1 2 3 4)\n",
-            "* \n",
-            "(1 2 3 4)\n",
-            "* \n",
-            "(1 2 3 4)\n",
-            "* "
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ Y\n",
-            ";     (SETQ Y '(1 2 3 4))\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: Y\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     Y\n",
-            ";   caught 1 WARNING condition\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1312,67 +1072,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wIWGgpj0pLzo",
-        "outputId": "4277a364-5687-4c11-ea13-a0c0e27c071a"
+        "outputId": "ee38d00b-6917-48e0-bef2-544bd47f1844"
       },
       "source": [
         "# immutability リストの操作は非破壊的\r\n",
         "%%script sbcl --noinform\r\n",
-        "(setq var '(a b c d e)) ;;=> (A B C D E)\r\n",
-        "(cdr var) ;;=> (B C D E)\r\n",
-        "var ;;=> (A B C D E)\r\n",
+        "(defvar dvar)\r\n",
+        "(setq dvar '(a b c d e)) ;;=> (A B C D E)\r\n",
+        "(cdr dvar) ;;=> (B C D E)\r\n",
+        "dvar ;;=> (A B C D E)\r\n",
         ";; var の値を変更したいときは setq や setf を使。\r\n",
-        "(setq var (cdr var)) ;;=> (B C D E)\r\n",
-        "var ;;=> (B C D E)"
+        "(setq dvar (cdr dvar)) ;;=> (B C D E)\r\n",
+        "dvar ;;=> (B C D E)"
       ],
-      "execution_count": 17,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "* \n",
-            "Type HELP for debugger help, or (SB-EXT:EXIT) to exit from SBCL.\n",
-            "\n",
-            "restarts (invokable by number or by possibly-abbreviated name):\n",
-            "  0: [CONTINUE      ] Ignore the package lock.\n",
-            "  1: [IGNORE-ALL    ] Ignore all package locks in the context of this operation.\n",
-            "  2: [UNLOCK-PACKAGE] Unlock the package.\n",
-            "  3: [ABORT         ] Exit debugger, returning to top level.\n",
-            "\n",
-            "(PACKAGE-LOCK-VIOLATION #<PACKAGE \"SB-DEBUG\"> :SYMBOL VAR :FORMAT-CONTROL \"setting the value of ~S\" :FORMAT-ARGUMENTS (VAR))\n",
-            "0] \n",
+            "DVAR\n",
+            "* \n",
+            "(A B C D E)\n",
+            "* \n",
+            "(B C D E)\n",
+            "* \n",
+            "(A B C D E)\n",
+            "* \n",
+            "(B C D E)\n",
+            "* \n",
+            "(B C D E)\n",
             "* "
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "; in: SETQ VAR\n",
-            ";     (SETQ VAR '(A B C D E))\n",
-            "; ==>\n",
-            ";   (SET 'VAR '(A B C D E))\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   violating package lock on SB-DEBUG:VAR\n",
-            "; in: SETQ VAR\n",
-            ";     (SETQ VAR '(A B C D E))\n",
-            "; \n",
-            "; caught WARNING:\n",
-            ";   undefined variable: VAR\n",
-            "; \n",
-            "; compilation unit finished\n",
-            ";   Undefined variable:\n",
-            ";     VAR\n",
-            ";   caught 2 WARNING conditions\n",
-            "\n",
-            "debugger invoked on a SYMBOL-PACKAGE-LOCKED-ERROR in thread\n",
-            "#<THREAD \"main thread\" RUNNING {10005E85B3}>:\n",
-            "  Lock on package SB-DEBUG violated when setting the value of VAR while in\n",
-            "  package COMMON-LISP-USER.\n",
-            "See also:\n",
-            "  The SBCL Manual, Node \"Package Locks\"\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
